browser/css/cool.css
/* ... */
.tracked-deleted-comment-show .cool-annotation-menubar {
	display: none;
}

#main-document-content {
	z-index: 0;
	display: flex;
	flex-direction: row;
	flex: 1;
	margin: 0;
	padding: 0;
	min-height: 0;
}

.cool-annotation-collapsed-show .cool-annotation-img {
	visibility: visible;
}

.cool-dont-break {
	/* These are technically the same, but use both */
	overflow-wrap: break-word;
	word-wrap: break-word;

	/* Don't eat new lines  */
	white-space: pre-wrap;

	/* Adds a hyphen where the word breaks, if supported (No Blink) */
	-ms-hyphens: auto;
	-moz-hyphens: auto;
	-webkit-hyphens: auto;
	hyphens: auto;
}

.cool-annotation-content-author {
	margin: 0;
	margin-top: 2px;
	height: 18px;
}

.cool-annotation-content-resolved {
	color: var(--color-success);
}

.cool-annotation-edit {
	margin: 3px;
	line-height: 1.4;
}

.cool-annotation-textarea {
	font-family: var(--cool-font) !important;
	font-size: var(--default-font-size);
	border: 1px solid var(--color-border);
	background-color: var(--color-background-dark);
	color: var(--color-main-text);
	overflow-x: hidden;
	padding: 2px;
	height: 54px;
	width: 100%;
	box-sizing: border-box;
}

.cool-annotation-textarea a:link,
.cool-annotation-textarea a:visited,
.cool-annotation-content a:link,
.cool-annotation-content a:visited {
	color: var(--color-hyperlink);
}

#input-modal-input.cool-annotation-textarea {
	height: var(--annotation-input-size);
}

.cool-div-layer {
	position: absolute;
	left: 0;
	top: 0;
}

.cool-annotation-table {
	border-spacing: 0;
	border-collapse: separate;
	white-space: nowrap;
	width: 100%;
}

.cool-annotation-img {
	box-sizing: content-box !important;
	max-width: 32px;
	display: inline-block;
	border: solid 2px;
	border-radius: 50%;
	height: 32px;
	width: 32px;
	padding: 0;
	opacity: 0.9;
}

.cool-annotation.collapsed-comment .cool-annotation-img:hover {
	cursor: pointer;
	opacity: 1;
	box-shadow: 0px 4px 10px var(--color-box-shadow);
}

.cool-annotation-img .avatar-img {
	border: none;
}
.cool-annotation-img > .avatar-img {
	display: block;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	width: 32px; /* Width of new image */
	height: 32px; /* Height of new image */
	background: url('images/user.svg') center 3px no-repeat;
}

.leaflet-container .leaflet-pane.leaflet-calc-background-pane {
	z-index: 0;
}

.avatar-img {
	border: solid 2px;
	border-radius: 50%;
}

.user-info {
	border-radius: 50%;
	width: var(--btn-size);
	height: var(--btn-size);
	overflow: auto;
	margin: auto;
}

.cool-annotation-author {
	padding-left: 10px;
	padding-right: 10px;
	vertical-align: top;
	display: table-cell;
	width: 100%;
	overflow: hidden;
	max-width: 110px;
}

.cool-annotation-menu, .cool-annotation-menu-redline, .cool-redline-accept-button, .cool-redline-reject-button {
	margin: 0 !important;
	padding: 0 !important;
	min-width: initial !important;
	width: var(--btn-size) !important;
	height: var(--btn-size) !important;
	vertical-align: top;
	border: 1px solid transparent !important;
	display: inline-block !important;
}

.cool-redline-accept-button {
	background: url('images/lc_acceptchanges.svg') no-repeat center !important;
}

.cool-redline-reject-button {
	background: url('images/lc_rejecttrackedchange.svg') no-repeat center !important;
}

.cool-annotation-menu, .cool-annotation-menu-redline {
	background: url('images/submenu.svg') no-repeat center/contain !important;
}

.cool-annotation-menu:hover, .cool-annotation-menu-redline:hover, .cool-redline-accept-button:hover, .cool-redline-reject-button:hover {
	border: 1px solid var(--color-border-darker);
}

.cool-annotation-date {
	font-size: var(--default-font-size);
}

.cool-annotation-autosavelabel {
	font-size: var(--default-font-size);
	opacity: 75%;
}

.cool-annotation-menubar {
	margin: 0;
	padding: 0;
	vertical-align: top;
}

.cool-annotation-child-line {
	border-style: none none dashed dashed;
	border-width: thin;
	border-color: black;
}
/*Tooltips
----------------------------------*/
[data-title]:hover:after {
	padding: 7px 9px;
	font-size: 1em;
	line-height: 1;
	opacity: 1;
	transition: all 0.1s ease 0.5s;
	visibility: visible;
}
[data-title]:after {
	content: attr(data-title);
	font-size: 1em !important;
	bottom: -1.6em;
	left: 100%;
	white-space: nowrap;
	opacity: 0;
	border-color: var(--color-border-darker);
	visibility: hidden;
}
.cool-ruler-left[data-title]:after,
.cool-ruler-right[data-title]:after {
	bottom: -2.8em;
	left: auto;
}

.cool-ruler.vruler {
	border-top: solid 1px var(--color-toolbar-border);
}

#vertical-ruler .cool-ruler-left[data-title]:after,
#vertical-ruler .cool-ruler-right[data-title]:after {
	bottom: 3em;
	left: auto;
	transform: rotate(-90deg);
}
[data-title] {
	position: relative;
}

.cool-annotation-caption {
	font-weight: bold;
}

.cool-bar {
	box-shadow: 0 1px 5px rgba(0,0,0,0.65);
	border-radius: var(--border-radius);
	display: inline-block;
	margin: 3px;
	vertical-align: middle;
}

.cool-bar a,
.cool-bar a:hover {
	background-color: var(--color-background-lighter);
	border-bottom: 1px solid var(--color-border);
	width: 30px;
	height: 30px;
	line-height: 30px;
	display: block;
	text-align: center;
	text-decoration: none;
	color: var(--color-main-text);
}

.cool-bar a:hover {
	background-color: var(--color-background-darker);
}

.cool-bar a:first-child {
	border-top-left-radius: var(--border-radius);
	border-top-right-radius: var(--border-radius);
}

.cool-bar a:last-child {
	border-bottom-left-radius: var(--border-radius);
	border-bottom-right-radius: var(--border-radius);
	border-bottom: none;
}

.cool-bar a.leaflet-disabled {
	cursor: default;
	background-color: var(--color-background-lighter);
	color: var(--color-text-lighter);
}

.cool-bar a {
	background-position: 50% 50%;
	background-repeat: no-repeat;
	display: block;
	width: 30px;
	height: 30px;
	line-height: 30px;
}

.cool-control-scroll-up,
.cool-control-scroll-down {
	font: bold 18px 'Lucida Console', Monaco, monospace;
	text-indent: 1px;
}
/* ... */

